<resources>
    <string name="app_name">DreamCatcher-Android</string>
    <string name="map_title">Dream Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_placeholder">이름을 작성해주세요.</string>
    <string name="age_placeholder">나이를 입력해주세요.</string>
    <string name="age_title">나이</string>
    <string name="name_title">이름</string>
    <string name="signin_logo_title">Login</string>
    <string name="badge_title">Dream Cathcer</string>
    <string name="story_name_default">스토리 이름</string>
    <string name="start_title_logo">Dream\nCatcher</string>
    <string name="start_btn">시작하기</string>
    <string name="next_btn">다음으로</string>
    <string name="show_hint">힌트보기</string>
    <string name="badge_example_title">꿈은 열기구를 타고</string>
    <string name="badge_example_address">대전 갑천 둔지</string>
    <string name="science_inside_story">스토리 속 과학</string>
    <string name="place_inside_story">스토리 속 장소</string>
    <string name="science_story_example1">부력의 원리 (아르키메데스의 원리): 아르키메데스의 원리에 따르면, 유체 속에 잠긴 물체는 그 물체가 밀어낸 유체의 무게만큼 위로 뜨는 힘을 받습니다. 열기구의 경우, \'유체\'는 공기입니다.</string>
    <string name="science_story_example2">기체의 열팽창 (샤를의 법칙): 압력이 일정할 때 기체의 부피는 절대온도에 비례합니다. 즉, 공기를 가열하면 부피가 증가하고 밀도가 감소합니다.</string>
    <string name="science_place_example">대전의 갑천은 대전의 하천입니다. 대전의 3대 하천 중에 하나로, 가장 긴 하천입니다. 매넌 다양하고 아름다운 꽃이 피는 곳입니다.</string>
    <string name="story_dialog_title_example">스토리 이름</string>
    <string name="story_dialog_content_example">스토리 내용 스토리 내용 스토리 내용 스토리 내용 스토리 내용 스토리 내용</string>
    <string name="dialog_hint_title">Hint</string>
    <string name="btn_confrim">확인하기</string>
    <string name="story_clear_text">미션을 성공했습니다.\n꿈의 주인이 깨어났으니 보상으로 뱃지를 드리겠습니다.</string>
    <string name="dream_out">꿈에서 나기기</string>
    <string name="story_start_text_example">열기구를 띄우는 원리는 간단하다네. 뜨거운 공기가 차가운 공기보다 가벼워지니까, 열기구가 위로 떠오르는 걸세!</string>
    <string name="option1_example">버너에 불을 붙여 가열한다</string>
    <string name="option2_example">버너를 터뜨린다</string>
    <string name="stroy_question_example">열기구를 띄우려고한다.\n당신의 선택은?</string>
    <string name="story_start_btn">스토리 진행 시작</string>
</resources>