<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignInFragment">

        <TextView
            android:id="@+id/fragment_signin_title_tv"
            style="@style/h5_60_Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_logo_title"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/fragment_signin_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_signin_logo_moon"
            app:layout_constraintEnd_toEndOf="@+id/fragment_signin_title_tv"
            app:layout_constraintStart_toStartOf="@+id/fragment_signin_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_title_tv" />

        <TextView
            android:id="@+id/fragment_signin_name_tv"
            style="@style/h4_18_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_logo_iv"/>

        <EditText
            android:id="@+id/fragment_signin_name_et"
            style="@style/body2_14_medium"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/Purple4"
            android:hint="@string/name_placeholder"
            android:textColorHint="@color/Purple3"
            android:paddingStart="16dp"
            android:background="@drawable/ic_textfield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_name_tv" />

        <TextView
            android:id="@+id/fragment_signin_age_tv"
            style="@style/h4_18_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/age_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_name_et" />

        <EditText
            android:id="@+id/fragment_signin_age_et"
            style="@style/body2_14_medium"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/Purple4"
            android:textColorHint="@color/Purple3"
            android:hint="@string/age_placeholder"
            android:background="@drawable/ic_textfield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_age_tv" />

        <ImageButton
            android:id="@+id/fragment_signin_login_ib"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_signin_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signin_age_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>