<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="@drawable/shape_rounded_16dp">

        <ImageView
            android:id="@+id/dialog_story_preview_iv"
            android:layout_width="132dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_rounded_12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/dialog_story_title_tv"
            style="@style/h3_18_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/story_dialog_title_example"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_story_preview_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_story_content_tv"
            style="@style/body2_14_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/story_dialog_content_example"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_story_preview_iv"
            app:layout_constraintTop_toBottomOf="@+id/dialog_story_title_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_story_start_bt"
            style="@style/body1_14_bold"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="12dp"
            android:background="@drawable/ic_gradation_btn"
            android:text="@string/start_btn"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_story_content_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>