<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.story.StoryHintFragment"
        android:background="@drawable/background_color_symmetry">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_story_hint_cl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="108dp"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rounded_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_story_hint_iv"
                android:layout_width="0dp"
                android:layout_height="208dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_rounded_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_story_hint_content_tv"
                style="@style/h4_18_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stroy_question_example"
                android:breakStrategy="simple"
                android:lineSpacingExtra="3dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_story_hint_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_story_hint_bt1"
            style="@style/h4_18_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_gradation_btn"
            android:text="@string/option1_example"
            android:textColor="@color/White"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/fragment_story_hint_cl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_story_hint_bt2"
            style="@style/h4_18_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_gradation_btn"
            android:text="@string/option2_example"
            android:textAlignment="center"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_story_hint_bt1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_story_hint_show_hint_bt"
            style="@style/h4_18_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_gradation_btn"
            android:text="@string/show_hint"
            android:textAlignment="center"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_story_hint_bt2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>